use "Foreign Function & Memory API" instead of JNI